# docs/swagger.json
@@ -352,6 +352,38 @@
                 "responses": {}
             }
         },
+        "/user/monthly-insights": {
+            "get": {
+                "description": "Retrieves mental health and physical health data for a specified month",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "logEntry"
+                ],
+                "summary": "Fetch monthly insights data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Month and Year (YYYY-MM)",
+                        "name": "monthYear",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/logEntry.InsightsResDto"
+                        }
+                    }
+                }
+            }
+        },
         "/user/months": {
             "get": {
                 "description": "Fetch log entry data for a specific month and year.",
@@ -724,6 +756,9 @@
         "logEntry.GetLogEntryResDto": {
             "type": "object",
             "properties": {
+                "id": {
+                    "type": "string"
+                },
                 "message": {
                     "type": "string"
                 },
