# router/userRouter.go
@@ -42,6 +42,7 @@ func UsersSetupsRoutes(app *fiber.App) {
 	user.Get("/fetch-all-data", jwt, logEntry.FetchAllData)
 	user.Get("/months", jwt, logEntry.Months)
 	user.Get("/weekly-insights", logEntry.WeeklyInsights)
+	user.Get("/monthly-insights", logEntry.MonthlyInsights)
 	// user.Get("/physical-health-months", jwt, logEntry.PhysicalHealthInsightMonths)
 	user.Get("/logentry-info/:id", jwt, logEntry.FetchLogEntryById)
 	user.Put("/edit-appointment/:id", jwt, logEntry.UpdateLogEntry)
